--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Work Book Links</title>
-  </head>
-  <body>
-    <h1>Week 1</h1>
-    <a href="01week/resume/index.html">Week 1 - Resume</a><br>
-    <a href="01week/bio/index.html">Week 1 - Bio</a>
-    <hr>
-    <h1>Week 2</h1>
-    <a href="02week/nasa/index.html">Week 2 - Nasa</a>
-  </body>
+
+<head>
+  <title>Introduction to Web Development Lessons - Alison</title>
+
+</head>
+
+<body>
+  <header>
+    <h1>Alison Dorantes</h1>
+    <h3>Intro to HTML/CSS: Projects and Homework</h3>
+  </header>
+  <main>
+  <section>
+    <h1>Week One</h1>
+    <a href="01week/resume/index.html">Resume</a>
+
+    <a href="01week/bio/index.html">Biography</a>
+
+    <a href="02week/nasa/index.html">NASA 
+  </section>
+  </main>
+  <footer>2017</footer>
+</body>
 </html>
