--- a/02week/nasa/index.html
+++ b/02week/nasa/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Nasa</title>
-  </head>
-  <body>
-    <div class="main-container">
-      <h1>Nasa Background Image</h1>
-    </div>
-  </body>
+<html lang="en">
+
+<head>
+  <!-- This is the meta data -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- This is the page title -->
+  <title>NASA Landing Page | Box Model Lesson</title>
+
+  <!-- This is my CSS Reset file -->
+  <link rel="stylesheet" href="css/css-reset.css">
+
+  <!-- This is my CSS file -->
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+  <main>
+    <section id="hero">
+      <div id="nasa">
+        <h1>NASA</h1>
+      </div>
+    </section>
+    <section id="info">
+      <div class="social-media">
+        <h3>Social Media</h3>
+        </br>
+        <ul>
+          <li>Twitter: <a href="https://twitter.com/nasa?lang=es">@NASA</a></li>
+          <li>Facebook: <a href="https://www.facebook.com/NASA/">NASA</a></li>
+          <li>Instagram: <a href="https://www.instagram.com/nasa/">@NASA</a></li>
+          <li>Youtube: <a href="https://www.youtube.com/user/NASAtelevision">NASATeleveision</a></li>
+        </ul>
+      </div>
+      <div class="office-info">
+        <h3>Office Info</h3>
+        </br>
+        <ul>
+          <li>Public Communications Office</li>
+          <li>NASA Headquarters</li>
+          <li>300 E. Street SW, Suite 5R30</li>
+          <li>Washington, DC 20546</li>
+          <li>(202) 358-0001 (Office)</li>
+          <li>(202) 358-4338 (Fax)</li>
+        </ul>
+      </div>
+      <div class="contact-us">
+        <h3>Contact Us</h3>
+        </br>
+        <form>
+          <p>First name:</p>
+          <input type="text" name="firstname">
+          </br>
+          <p>Message:</p>
+          <textarea wrap="hard" name="message">Enter your message...</textarea>
+          </br>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+    </section>
+  </main>
+
+</body>
+
 </html>
