--- a/03week/planet/index.html
+++ b/03week/planet/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+  <!-- This is my CSS Reset file -->
+  <!-- <link rel="stylesheet" href="css/css-reset.css"> -->
+
+  <!-- This is my CSS file -->
     <link rel="stylesheet" href="css/style.css">
+
     <!-- This is my page title -->
     <title>Daily Planet Homepage</title>
 </head>
@@ -13,21 +20,24 @@
 <body>
     <header> <h1>The Daily Planet</h1>
         <nav>
+          <!-- <div> -->
           <span><a href="#sports">Sports</a></span>
           <span><a href="#local">Local</a></span>
           <span><a href="#Economy">Economy</a></span>
         </nav>
+        <!-- </div> -->
 </header>
 
-    <main><h3><strong>Title of News Story</strong></h3>
-        <section>
+    <main>
+      <section>
+          <article>
+        <h3><strong>Elderly Pug in Need of Adoption</strong></h3>
+        <!-- <img src="img" -->
+              <p<img src="" align="left">></p>
 
-            <article>
-              <p></p>
+   </article>
+</section>
 
-</article>
-
-        </section>
 
         <aside><a href="" target="_blank"><img src="" class=""></a>
         </aside>
