updated html file

--- a/03week/planet/index.html
+++ b/03week/planet/index.html
@@ -33,7 +33,7 @@
           <article>
         <h3><strong>Elderly Pug in Need of Adoption</strong></h3>
         <!-- <img src="img" -->
-              <p<img src="img/pug.jpg" align="left">12 year old female pug named Lana in need of human companionship.</p>
+              <p><img src="img/Lana.jpg" align="left">12 year old female pug named Lana in need of human companionship.</p>
 
 <p>Her foster parents describe her as, "a living doll." Her heart is the size of this great state and while she has some physical limitations, there are no bounds to her affection and loyalty.
 She bonds quickly to her humans and really looks to them for her care.</p>
