added new image

--- a/03week/planet/index.html
+++ b/03week/planet/index.html
@@ -41,7 +41,8 @@ She bonds quickly to her humans and really looks to them for her care.</p>
    </article>
 </section>
 
-        <aside><a href="http://www.onlynaturalpet.com/images/body/Taste-of-the-Wild-Dog-Food.jpg" target="_blank"><img src="Taste-of-the-Wild-Dog-Food.jpg" class="Taste of the Wild"></a>
+        <aside>
+          <img src="img/Taste-of-the-Wild-Dog-Food.jpg">
         </aside>
 
         <footer>&copy; &nbsp;Daily Planet 2017
