--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -18,18 +18,20 @@
 </head>
 
 <body>
-    <header> <h1>The Watsonville Daily</h1>
-        <nav>
-          <!-- <div> -->
-          <span><a href="#sports">Sports</a></span>
-          <span><a href="#local">Local</a></span>
-          <span><a href="#Economy">Economy</a></span>
-        </nav>
-        <!-- </div> -->
+    <header>
+      <h1>The Watsonville Daily</h1>
+        <hr>
+
+          <div class="flex-grid-nav"
+          <div class="col"><a href="#">Sports</a></div>
+      <div class="col"><a href="#">Local</a></div>
+      <div class="col"><a href="#">Economy</a></div>
+    </div>
+        <hr>
 </header>
 
-    <main>
-      <section>
+<main class="flex-grid-main">
+<section class="col-main">
           <article>
         <h3><strong>Local Woman Finds Success in Web Development</strong></h3>
         <!-- <img src="img" -->
