--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-  <!-- This is my CSS Reset file -->
-  <!-- <link rel="stylesheet" href="css/css-reset.css"> -->
+
+  <link rel="stylesheet" href="css/css-reset.css"> 
 
   <!-- This is my CSS file -->
     <link rel="stylesheet" href="css/style.css">
