--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -8,7 +8,7 @@
 
 
 
-  <link rel="stylesheet" href="css/css-reset.css"> 
+  <link rel="stylesheet" href="css/css-reset.css">
 
   <!-- This is my CSS file -->
     <link rel="stylesheet" href="css/style.css">
@@ -33,17 +33,18 @@
 <main class="flex-grid-main">
 <section class="col-main">
           <article>
-        <h3><strong>Local Woman Finds Success in Web Development</strong></h3>
-        <!-- <img src="img" -->
+            <img src="img/alisondgarcia.jpg" align="left">
+            <h3><strong>Local Woman Finds Success in Web Development</strong></h3>
+
               <p><img> Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA, has finally broken out of her slump and found success in web development.</p>
 
-<p>Alison began her interest with computers as a young video game aficionado.</p>
+              <p>Alison began her interest with computers as a young video game aficionado.</p>
+        </article>
+      </section>
 
-   </article>
-</section>
+        <aside class="col-main-aside">
+      <img src="img/watsonville.jpg" class="img-aside">
 
-        <aside>
-          <img>
         </aside>
 
         <footer>&copy; &nbsp;The Watsonville Daily 2017
