created new index

--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -1,55 +1,38 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--The link to my css file-->
+        <link rel="stylesheet" href="css/style.css">
 
-
-
-  <link rel="stylesheet" href="css/css-reset.css">
-
-  <!-- This is my CSS file -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- This is my page title -->
-    <title>Watsonville Daily</title>
-</head>
+        <title>Watsonville Daily News</title>
+  </head>
 
 <body>
-    <header>
-      <h1>The Watsonville Daily</h1>
-        <hr>
+    <header><h1>Watsonville Daily News</h1></header>
+    <nav>
+    </nav> 
+  <div class="flex-grid">
+  <div class="col">1</div>
+</div>
 
-          <div class="flex-grid-nav"
-          <div class="col"><a href="#">Sports</a></div>
-      <div class="col"><a href="#">Local</a></div>
-      <div class="col"><a href="#">Economy</a></div>
-    </div>
-        <hr>
-</header>
+<div class="flex-grid-thirds">
+  <div class="col">1</div>
+  <div class="col">2</div>
+  <div class="col">3</div>
+</div>
 
-<main class="flex-grid-main">
-<section class="col-main">
-          <article>
-            <img src="img/alisondgarcia.jpg" align="left">
-            <h3><strong>Local Woman Finds Success in Web Development</strong></h3>
-
-              <p><img> Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA, has finally broken out of her slump and found success in web development.</p>
-
-              <p>Alison began her interest with computers as a young video game aficionado.</p>
-        </article>
-      </section>
-
-        <aside class="col-main-aside">
-      <img src="img/watsonville.jpg" class="img-aside">
-
-        </aside>
-
-        <footer>&copy; &nbsp;The Watsonville Daily 2017
-        </footer>
-    </main>
+<div class="flex-grid">
+  <div class="col">1</div>
+  <div class="col">2</div>
+  <div class="col">3</div>
+  <div class="col">4</div>
+  <div class="col">5</div>
+  <div class="col">6</div>
+</div>
 
 </body>
 
