--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- This is the CSS Reset file -->
+        <link rel="stylesheet" href="css/css-reset.css">
     <!--The link to my css file-->
         <link rel="stylesheet" href="css/style.css">
 
@@ -12,27 +14,32 @@
   </head>
 
 <body>
+    <div class="flex-grid nav">
+      <div class="col-title">
     <header><h1>Watsonville Daily News</h1></header>
-    <nav>
-    </nav> 
-  <div class="flex-grid">
-  <div class="col">1</div>
-</div>
+  </div>
+<!--Navigation items -->
+<div class="col-nav">
+  <h3><a href="#">Sports</a></h3>
+  <h3><a href="#">Local</a></h3>
+  <h3><a href="#">Economy</a><h3>
+  </div>
 
-<div class="flex-grid-thirds">
-  <div class="col">1</div>
-  <div class="col">2</div>
-  <div class="col">3</div>
-</div>
+<section>
+</section>
 
-<div class="flex-grid">
-  <div class="col">1</div>
-  <div class="col">2</div>
-  <div class="col">3</div>
-  <div class="col">4</div>
-  <div class="col">5</div>
-  <div class="col">6</div>
-</div>
+<!-- the aside -->
+<aside class="col-main-aside">
+</aside>
+
+</main>
+
+<!-- the footer -->
+<footer class="flex-grid-footer">
+  <div class="col-main-footer">
+    <h5>&copy; Watsonville Daily News 2017</h5>
+  </div>
+</footer> 
 
 </body>
 
