added more index

--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -24,14 +24,22 @@
   <h3><a href="#">Local</a></h3>
   <h3><a href="#">Economy</a><h3>
   </div>
+<!-- Where the article begins -->
+<main class="flex-grid-main">
 
-<section>
+<section class="col-main">
+  <article>
+    <img src="img/alisondgarcia.jpg">
+    <h2>Local Woman Finds Success in Web Development</h2>
+    <p> Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
+      has finally broken out of her slump and found success in web development.</p>
+  </article>
 </section>
 
 <!-- the aside -->
 <aside class="col-main-aside">
 </aside>
-
+<img src="img/watsonville.jpg"> 
 </main>
 
 <!-- the footer -->
@@ -39,7 +47,7 @@
   <div class="col-main-footer">
     <h5>&copy; Watsonville Daily News 2017</h5>
   </div>
-</footer> 
+</footer>
 
 </body>
 
