--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -1,53 +1,68 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- This is the CSS Reset file -->
-        <link rel="stylesheet" href="css/css-reset.css">
-    <!--The link to my css file-->
-        <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <title>Watsonville Daily News</title>
-  </head>
+
+  <title>The Watsonville Daily News</title>
+
+  <!-- Google font -->
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+  <!-- This is the CSS Reset file -->
+  <link rel="stylesheet" href="css/css-reset.css">
+
+  <!-- This is the CSS file -->
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
 
 <body>
-    <div class="flex-grid nav">
+  <header>
+
+
+    <div class="flex-grid-nav">
       <div class="col-title">
-    <header><h1>Watsonville Daily News</h1></header>
-  </div>
-<!--Navigation items -->
-<div class="col-nav">
-  <h3><a href="#">Sports</a></h3>
-  <h3><a href="#">Local</a></h3>
-  <h3><a href="#">Economy</a><h3>
-  </div>
-<!-- Where the article begins -->
-<main class="flex-grid-main">
+        <h1>The Watsonville Daily News</h1>
+      </div>
 
-<section class="col-main">
-  <article>
-    <img src="img/alisondgarcia.jpg">
-    <h2>Local Woman Finds Success in Web Development</h2>
-    <p> Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
-      has finally broken out of her slump and found success in web development.</p>
-  </article>
-</section>
+      <!-- These are the nav items -->
+      <div class="col-nav">
+        <h3><a href="#">Sports</a></h3>
+        <h3><a href="#">Local</a></h3>
+        <h3><a href="#">Economy</a></h3>
+      </div>
 
-<!-- the aside -->
-<aside class="col-main-aside">
-</aside>
-<img src="img/watsonville.jpg"> 
-</main>
+  </header>
 
-<!-- the footer -->
-<footer class="flex-grid-footer">
-  <div class="col-main-footer">
-    <h5>&copy; Watsonville Daily News 2017</h5>
-  </div>
-</footer>
+  <!-- This is the article  -->
+  <main class="flex-grid-main">
+    <section class="col-main">
+      <article>
+        <img src="img/alisondgarcia.jpg">
+        <h2>Local Woman Finds Success in Web Development</h2>
+        <p>Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
+      has finally broken out of her slump and found success in web development. Her story began...</p>
+
+      </article>
+    </section>
+
+    <!-- This is the ad on the side -->
+    <aside class="col-main-aside">
+      <img src="img/watsonville.jpg">
+    </aside>
+
+  </main>
+
+  <footer class="flex-grid-footer">
+    <div class="col-main-footer">
+      <h5>&copy; The Watsonville Daily News 2017</h5>
+    </div>
+  </footer>
+
 
 </body>
 
