changed html file again

--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -23,7 +23,7 @@
 <body>
   <header>
 
-
+  <!-- This is the title -->
     <div class="flex-grid-nav">
       <div class="col-title">
         <h1>The Watsonville Daily News</h1>
@@ -46,6 +46,7 @@
         <h2>Local Woman Finds Success in Web Development</h2>
         <p>Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
       has finally broken out of her slump and found success in web development.</p>
+      <br>
 
       <p>Alison went to college in the San Francisco Bay Area, initially intent on
         becomming a lawyer. Then that changed to teaching. And teaching was interesting, but
@@ -53,10 +54,12 @@
         she did in trying to negotiate problems in a giant, bureaucracy such as *Fake Name*
         Unified School District. She decided it was time to move onto something that
         was equally challenging and rewarding, and that something happened to be web development.</p>
+       <br>
 
       <p>Alison took a class at Austin Coding Academy and decided to continue her learning trajectory,
         finishing the intermediate class, and eventually the advanced class. She is currently a video game
-        developer for Rooster Teeth in Austin, Texas. she lives with her 2 blind pugs.</p> 
+        developer for Rooster Teeth in Austin, Texas. she lives with her 2 blind pugs.</p>
+      <br>
 
       </article>
     </section>
