--- a/03week/newspaper/index.html
+++ b/03week/newspaper/index.html
@@ -43,7 +43,7 @@
     <section class="col-main">
       <article>
         <img src="img/alisondgarcia.jpg">
-        <h2>Local Woman Finds Success in Web Development</h2>
+        <h2><strong>Local Woman Finds Success in Web Development</strong></h2>
         <p>Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
       has finally broken out of her slump and found success in web development.</p>
       <br>
