--- a/04week/testwebsite/index.html
+++ b/04week/testwebsite/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +64,7 @@
         <p>The real heart of the adventure is Hayato, a young boy who discovers that the killer is his father.
           He tracks down Josuke and the rest of the crew and manages to outwit his devious father to boot.
         </p>
-        
+
         <p>Kira Yoshikage is an evil man who is responsible for the murders of several men and women in the small
           town of Morioh. He was able to blend in with society due to his mild-mannerisms and David Bowie-like
           charisma. He was found out by the clever and brave Hayato, and brought down by the rest of the crew.
