--- a/04week/testwebsite/index.html
+++ b/04week/testwebsite/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
   <title>Morioh Fan Club</title>
 
-  <!-- This is my CSS Reset File -->
+  <!-- Google font -->
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+  <!-- This is the CSS Reset file -->
   <link rel="stylesheet" href="css/css-reset.css">
 
-  <!-- This is my CSS File -->
+  <!-- This is the CSS file -->
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -24,9 +31,9 @@
 
       <!-- These are the nav items -->
       <div class="col-nav">
-        <h3><a href="#">About</a></h3>
-        <h3><a href="#">FAQ</a></h3>
-        <h3><a href="#">Contact Us</a></h3>
+        <h3><a href="#">Sports</a></h3>
+        <h3><a href="#">Local</a></h3>
+        <h3><a href="#">Economy</a></h3>
       </div>
 
   </header>
@@ -35,54 +42,42 @@
   <main class="flex-grid-main">
     <section class="col-main">
       <article>
-        <h2><strong>Josuke and His Team Save the Day! </strong></h2>
-        <p>Local teen Josuke Higashikata investigates a string of murders and discovers the killer.
-          Previously Josuke was somewhat of a delinquent, often getting into small money making schemes
-          and pranks. He soon learned that he had a unique power called a "stand" and that there were other
-          people like him in the town, including his nephew Jotaro, classmates Koichi and Okuyasu, and the
-          snarky famous mangaka Rohan.</p>
-          <br>
+        <img src="img/alisondgarcia.jpg">
+        <h2><strong>Local Woman Finds Success in Web Development</strong></h2>
+        <p>Alison Dorantes-Garcia, a 28 year-old woman from Watsonville, CA,
+      has finally broken out of her slump and found success in web development.</p>
+      <br>
 
-        <p>Josuke met his nephew under strange circumstances...
-          His father was having an affair with a Japanese woman several decades younger than him,
-          thus the 12 year age-gap between Josuke and his nephew Jotaro. Jotaro is a stoic man who is
-          studying to earn his PhD in marine biology.
-        </p>
-        <br>
+      <p>Alison went to college in the San Francisco Bay Area, initially intent on
+        becomming a lawyer. Then that changed to teaching. And teaching was interesting, but
+        not a passion. Alison found more pleasure in taking things apart and fixing them than
+        she did in trying to negotiate problems in a giant, bureaucracy such as *Fake Name*
+        Unified School District. She decided it was time to move onto something that
+        was equally challenging and rewarding, and that something happened to be web development.</p>
+       <br>
 
-        <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers
-          his own dormant "stand" ability. He is generally kind, thoughtful, and somewhat neurotic.
-        </p>
-        <br>
+      <p>Alison took a class at Austin Coding Academy and decided to continue her learning trajectory,
+        finishing the intermediate class, and eventually the advanced class. She is currently a video game
+        developer for Rooster Teeth in Austin, Texas. she lives with her 2 blind pugs.</p>
+      <br>
 
-        <p> Okuyasu is a young delinquent boy with a tragic past. He lost his older brother and lives with
-          his physically incapacitated father in a dilapidated, abandoned house in town. In spite of his difficult
-          life, Oku is a deeply affectionate and trusting person. He's Josuke's best friend and right-hand man.
-        </p>
-        <br>
-
-        <p>Rohan is a local comic book artist and writer (a mangaka). He's sort of a shit but he helps Josuke and the
-          crew track down the killer and solve the mystery with his intelligence and keen observational skills.
-        </p>
-        <br>
-
-        <p>The real heart of the adventure is Hayato, a young boy who discovers that the killer is his father.
-          He tracks down Josuke and the rest of the crew and manages to outwit his devious father to boot.
-        </p>
-        <br>
-
-        <p>Kira Yoshikage is an evil man who is responsible for the murders of several men and women in the small
-          town of Morioh. He was able to blend in with society due to his mild-mannerisms and David Bowie-like
-          charisma. He was found out by the clever and brave Hayato, and brought down by the rest of the crew.
-        </p>
-        <br> 
       </article>
     </section>
+
+    <!-- This is the ad on the side -->
+    <aside class="col-main-aside">
+      <img src="img/watsonville.jpg">
+    </aside>
+
   </main>
-  <!-- This is where the footer goes -->
+
   <footer class="flex-grid-footer">
     <div class="col-main-footer">
-      <h5>&copy; 2017 Morioh Fan Club</h5>
+      <h5>&copy; The Watsonville Daily News 2017</h5>
     </div>
   </footer>
+
+
+</body>
+
 </html>
