added week 4 html

--- a/04week/testwebsite/index.html
+++ b/04week/testwebsite/index.html
@@ -64,16 +64,13 @@
       </article>
     </section>
 
-    <!-- This is the ad on the side -->
-    <aside class="col-main-aside">
-      <img src="img/watsonville.jpg">
-    </aside>
+
 
   </main>
 
   <footer class="flex-grid-footer">
     <div class="col-main-footer">
-      <h5>&copy; The Watsonville Daily News 2017</h5>
+      <h5>&copy;2017 Morioh Fan Club</h5>
     </div>
   </footer>
 
