--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -26,14 +26,14 @@
   <!-- This is the title -->
     <div class="flex-grid-nav">
       <div class="col-title">
-        <h1>La Croix Presents: Can art inspired by Jojo's Bizarre Adventure</h1>
+        <h1>La Croix Presents: Flavors inspired by Jojo's Bizarre Adventure</h1>
       </div>
 
       <!-- These are the nav items -->
       <div class="col-nav">
-        <h3><a href="http://www.lacroixwater.com/flavors/">Product</a></h3>
-        <h3><a href="http://www.lacroixwater.com/category/blog/">About LaCroix</a></h3>
-        <h3><a href="http://www.lacroixwater.com/buy-online/">Buy LaCroix</a></h3>
+        <h3><a href="http://www.lacroixwater.com/flavors/" target="_blank">Product</a></h3>
+        <h3><a href="http://www.lacroixwater.com/category/blog/" target="_blank">About LaCroix</a></h3>
+        <h3><a href="http://www.lacroixwater.com/buy-online/" target-"blank">Buy LaCroix</a></h3>
       </div>
 
   </header>
@@ -42,7 +42,7 @@
   <main class="flex-grid-main">
     <section class="col-main">
       <article>
-        <img src="img/Josuke.jpg">
+        <img src="img/Josuke.png">
         <h2><strong>Two Great Tastes that Taste Great Together</strong></h2>
         <p>Local teen Josuke Higashikata investigates a string of murders and discovers the killer.
           Previously Josuke was somewhat of a delinquent, often getting into small money making schemes and pranks.
