--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -51,33 +51,39 @@
         </p>
       <br>
 
+      <img src="img/jotaro.png">
       <p>Josuke met his nephew under strange circumstances... His father was having an affair with a Japanese
         woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
         Jotaro is a stoic man who is studying to earn his PhD in marine biology.
       </p>
        <br>
 
+      <img src="img/Koichi.png">
       <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers his own dormant
         "stand" ability. He is generally kind, thoughtful, and somewhat neurotic.
       </p>
       <br>
 
+      <img src="img/Oku.png">
       <p>Okuyasu is a young delinquent boy with a tragic past. He lost his older brother and lives
         with his physically incapacitated father in a dilapidated, abandoned house in town. In spite of his
         difficult life, Oku is a deeply affectionate and trusting person. He's Josuke's best friend and right-hand man.
       </p>
       <br>
 
+      <img src="img/Rohan.png">
       <p>Rohan is a local comic book artist and writer (a mangaka). He's sort of a shit but he helps Josuke and the
         crew track down the killer and solve the mystery with his intelligence and keen observational skills.
       </p>
       <br>
 
+      <img src="img/Hayato.png">
       <p>The real heart of the adventure is Hayato, a young boy who discovers that the killer is his father.
         He tracks down Josuke and the rest of the crew and manages to outwit his devious father to boot.
       </p>
       <br>
 
+      <img src="img/Kira.png">
       <p>Kira Yoshikage is an evil man who is responsible for the murders of several men and women in the small
         town of Morioh. He was able to blend in with society due to his mild-mannerisms and David Bowie-like charisma.
         He was found out by the clever and brave Hayato, and brought down by the rest of the crew.
