--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -51,7 +51,7 @@
         </p>
       <br>
 
-      <img src="img/jotaro.png">
+      <img src="img/jotaro.jpg">
       <p>Josuke met his nephew under strange circumstances... His father was having an affair with a Japanese
         woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
         Jotaro is a stoic man who is studying to earn his PhD in marine biology.
@@ -77,13 +77,13 @@
       </p>
       <br>
 
-      <img src="img/Hayato.png">
+      <img src="img/Hayato.jpg">
       <p>The real heart of the adventure is Hayato, a young boy who discovers that the killer is his father.
         He tracks down Josuke and the rest of the crew and manages to outwit his devious father to boot.
       </p>
       <br>
 
-      <img src="img/Kira.png">
+      <img src="img/Kira.jpg">
       <p>Kira Yoshikage is an evil man who is responsible for the murders of several men and women in the small
         town of Morioh. He was able to blend in with society due to his mild-mannerisms and David Bowie-like charisma.
         He was found out by the clever and brave Hayato, and brought down by the rest of the crew.
