--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -39,6 +39,8 @@
   </header>
 
   <!-- This is the article  -->
+
+
   <main class="flex-grid-main">
     <section class="col-main">
       <article>
@@ -51,32 +53,21 @@
         </p>
       <br>
 
-      <div class="article-body">
-        <h2 class="article-title">
-          Hello World
-        </h2>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-      </div>
 
-      <img src="img/jotaro.jpg">
-      <p>Josuke met his nephew under strange circumstances... His father was having an affair with a Japanese
-        woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
-        Jotaro is a stoic man who is studying to earn his PhD in marine biology.
-      </p>
+      <a class="article" href="#">
+            <div class="article-body">
+              <h2 class="article-title">
+                Josuke
+              </h2>
+              <p class="article-content">
+                Josuke met his nephew under strange circumstances... His father was having an affair with a Japanese
+                  woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
+                  Jotaro is a stoic man who is studying to earn his PhD in marine biology.
+              </p>
+            </div>
+          </a>
        <br>
 
-       <a class="article" href="#">
-             <div class="article-body">
-               <h2 class="article-title">
-                 Hello World
-               </h2>
-               <p class="article-content">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-               </p>
-             </div>
-           </a>
       <img src="img/Koichi.png">
       <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers his own dormant
         "stand" ability. He is generally kind, thoughtful, and somewhat neurotic.
