--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -39,6 +39,11 @@
   </header>
 
   <!-- This is the article  -->
+  <section id="hero">
+    <div id="Jojo">
+      <h1>La Croix as Inspired by JJBA</h1>
+    </div>
+  </section>
 
 
   <main class="flex-grid-main">
