--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -45,7 +45,6 @@
     </div>
   </section>
 
-
   <main class="flex-grid-main">
     <section class="col-main">
       <article>
@@ -59,19 +58,13 @@
       <br>
 
 
-      <a class="article" href="#">
-            <div class="article-body">
-              <h2 class="article-title">
-                Josuke
-              </h2>
-              <p class="article-content">
-                Josuke met his nephew under strange circumstances... His father was having an affair with a Japanese
-                  woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
-                  Jotaro is a stoic man who is studying to earn his PhD in marine biology.
-              </p>
-            </div>
-          </a>
-       <br>
+      <img src="img/jotaro.png">
+      <p>Josuke met his nephew under strange circumstances... His father was having an affair with a
+        Japanese woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
+        Jotaro is a stoic man who is studying to earn his PhD in marine biology.
+      </p>
+      <br>
+       
 
       <img src="img/Koichi.png">
       <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers his own dormant
