--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -39,8 +39,8 @@
   </header>
 
   <!-- This is the article  -->
-  <section id="hero">
-    <div id="Jojo">
+  <main class="flex-grid-main">
+    <section class="col-main">
       <h1>La Croix as Inspired by JJBA</h1>
     </div>
   </section>
@@ -64,7 +64,7 @@
         Jotaro is a stoic man who is studying to earn his PhD in marine biology.
       </p>
       <br>
-       
+
 
       <img src="img/Koichi.png">
       <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers his own dormant
