--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -52,12 +52,15 @@
       <br>
 
 
+<div class="jotaro">
+  <div class="Jotaro">
       <img src="img/jotaro.png">
       <p>Josuke met his nephew under strange circumstances... His father was having an affair with a
         Japanese woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
         Jotaro is a stoic man who is studying to earn his PhD in marine biology.
       </p>
-      <br>
+    </div>
+
 
 
       <img src="img/Koichi.png">
