--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -52,7 +52,7 @@
       <br>
 
 
-<div class="jotaro">
+<section id="jotaro">
   <div class="Jotaro">
       <img src="img/jotaro.png">
       <p>Josuke met his nephew under strange circumstances... His father was having an affair with a
