--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
   </header>
   <main>
   <section>
+    <section id="weekOne" class="projects">
     <h1>Week One</h1>
     <a href="01week/resume/index.html">Resume</a>
 
     <a href="01week/bio/index.html">Biography</a>
 
-    <a href="02week/nasa/index.html">NASA
-  </section>
+    <section id="weekTwo" class="projects">
+    <h1>Week Two</h1>
+    <a href="02week/nasa/index.html">NASA</a>
+
+    <section id="weekFour" class="projects">
+<h4>Week Four</h4>
+<a href="04Week/01Checkpoint/index.html">Checkpoint #1</a>
+</section>
+
   </main>
   <footer>2017</footer>
 </body>
