--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -17,7 +17,7 @@
   <main>
     <section id="hero">
       <div id ="hero-copy">
-        <h1>Welcome
+        <h1>Welcome to
           our site</h1>
         </div>
       </section>
