added box color

--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -24,6 +24,9 @@
       <section
       id="title"></section>
 
+      <section >
+        <div class ="box black">
+       </div> 
     </main>
 
   </body>
