--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -25,8 +25,8 @@
       id="title"></section>
 
       <section >
-        <div class ="box black">
-       </div> 
+        <div class ="box_black">
+       </div>
     </main>
 
   </body>
