--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -25,8 +25,9 @@
       id="title"></section>
 
       <section >
-        <div class ="box_black">
+        <div class="box_black">
        </div>
+     </section> 
     </main>
 
   </body>
