added new index project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <a href="04Week/01Checkpoint/index.html">Checkpoint #1</a>
     </section>
 
+    <section id="weekFour" class="projects">
+    <h1>Week Four</h1>
+    <a href="04Week/welcome/index.html">welcome</a>
+    </section>
+
   </main>
   <footer>2017</footer>
 </body>
