added different rectangles

--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -24,11 +24,26 @@
       <section
       id="title"></section>
 
-      <section >
-        <div class="box_black"> heeee
-        
+      <section>
+        <div class="box_black">
        </div>
      </section>
+
+    <section>
+      <div clas="blue_rectangle">
+      </div>
+    </section>
+
+    <section>
+      <div clas="orange_rectangle">
+      </div>
+    </section>
+
+    <section>
+      <div clas="aqua_rectangle">
+      </div>
+    </section>
+     
     </main>
 
   </body>
