added html for colors

--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -30,17 +30,17 @@
      </section>
 
     <section>
-      <div clas="blue_rectangle">
+      <div class="blue_rectangle">
       </div>
     </section>
 
     <section>
-      <div clas="orange_rectangle">
+      <div class="orange_rectangle">
       </div>
     </section>
 
     <section>
-      <div clas="aqua_rectangle">
+      <div class="aqua_rectangle">
       </div>
     </section>
 
