--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -25,7 +25,7 @@
       id="title"></section>
 
       <section>
-        <div class="box_black">
+        <div class="container">
        </div>
      </section>
 
