--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -44,6 +44,13 @@
       </div>
     </section>
 
+    <div class="flex-container">
+  <div class="flex-item">1</div>
+  <div class="flex-item">2</div>
+  <div class="flex-item">3</div>
+
+</ul>
+
     </main>
 
   </body>
