--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -18,38 +18,43 @@
     <section id="hero">
       <div id ="hero-copy">
         <h1>Welcome to
-          our site</h1>
+          our site
+        </h1>
         </div>
       </section>
       <section
       id="title"></section>
 
-      <section>
-        <div class="container">
-       </div>
-     </section>
+<!-- div class "wrapper"-->
+  <section>
+    <div class="flex-grid-thirds">
+    <div class="blue_rectangle">
+     </div>
+    <div class="orange_rectangle">
+    </div>
+    <div class="aqua_rectangle">
+    </div>
 
-    <section>
-      <div class="blue_rectangle">
-      </div>
-    </section>
 
-    <section>
-      <div class="orange_rectangle">
-      </div>
-    </section>
+<!--  <section>
+    <div column="flex-grid-thirds">
+      <h1>Title</h1>
+    </p> Bacon ipsum dolor amet strip steak jowl boudin pig meatball tail chuck
+    capicola meatloaf, ball tip landjaeger pastrami. Leberkas capicola ribeye, sirloin
+    cupim turducken beef bacon shoulder turkey ground round short loin shank.
+    Venison swine drumstick, kevin capicola sirloin meatball chicken.
+  </p> -->
 
-    <section>
-      <div class="aqua_rectangle">
-      </div>
-    </section>
 
-    <div class="flex-container">
-  <div class="flex-item">1</div>
-  <div class="flex-item">2</div>
-  <div class="flex-item">3</div>
+</div>
+</section>
 
-</ul>
+
+
+
+
+
+
 
     </main>
 
