--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -8,7 +8,7 @@
   <title>Lesson 07 > Media Queries > Welcome to Our Site!</title>
   <!-- This is my CSS Reset File -->
     <link rel="stylesheet" href="css/css-reset.css">
-    <!-- This is my personal style -->
+  <!-- This is my personal style -->
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -17,43 +17,42 @@
   <main>
     <section id="hero">
       <div id ="hero-copy">
+<!-- this is the tile section -->
         <h1>Welcome to
           our site
         </h1>
         </div>
       </section>
       <section
-      id="title"></section>
+      id="title">
+          </section>
 
-<!-- div class "wrapper"-->
-  <section>
-    <div class="flex-grid-thirds">
-    <div class="blue_rectangle">
-     </div>
-    <div class="orange_rectangle">
-    </div>
-    <div class="aqua_rectangle">
-    </div>
+<!-- divs that are different colored boxes-->
+<section>
+ <div class="container">
+ <div class="blue_rectangle">
+   <h1>Title</h1>
+     <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+     Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+     pork prosciutto short ribs ham hock burgdoggen flank chuck.
+   </p>
+  </div>
 
+ <div class="orange_rectangle">
+   <h1>Title</h1>
+   <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+   Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+   pork prosciutto short ribs ham hock burgdoggen flank chuck.
+ </p>
+ </div>
 
-<!--  <section>
-    <div column="flex-grid-thirds">
-      <h1>Title</h1>
-    </p> Bacon ipsum dolor amet strip steak jowl boudin pig meatball tail chuck
-    capicola meatloaf, ball tip landjaeger pastrami. Leberkas capicola ribeye, sirloin
-    cupim turducken beef bacon shoulder turkey ground round short loin shank.
-    Venison swine drumstick, kevin capicola sirloin meatball chicken.
-  </p> -->
-
-
-</div>
-</section>
-
-
-
-
-
-
+ <div class="aqua_rectangle">
+   <h1>Title</h1>
+   <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+   Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+   pork prosciutto short ribs ham hock burgdoggen flank chuck.
+ </p>
+ </div>
 
 
     </main>
