--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -18,14 +18,13 @@
     <section id="hero">
       <div id ="hero-copy">
 <!-- this is the tile section -->
-        <h1>Welcome to
-          our site
+        <h1>Welcome to our site
         </h1>
         </div>
       </section>
-      <section
-      id="title">
-          </section>
+
+      <section id="title">
+      </section>
 
 <!-- divs that are different colored boxes-->
 <section>
