added new images

--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-
-  <title>La Croix</title>
-
   <!-- Google font -->
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
 
   <!-- This is the CSS Reset file -->
   <link rel="stylesheet" href="css/css-reset.css">
-
   <!-- This is the CSS file -->
   <link rel="stylesheet" href="css/style.css">
-
+    <title>La Croix</title>
 </head>
 
 <body>
   <header>
-
   <!-- This is the title -->
     <div class="flex-grid-nav">
       <div class="col-title">
@@ -38,72 +32,47 @@
 
   </header>
 
-  <!-- This is the article  -->
-  <main class="flex-grid-main">
-    <section class="col-main">
-      <article>
-        <img src="img/Josuke.png">
-        <h2><strong>Two Great Tastes that Taste Great Together</strong></h2>
-        <p>Local teen Josuke Higashikata investigates a string of murders and discovers the killer.
-          Previously Josuke was somewhat of a delinquent, often getting into small money making schemes and pranks.
-          He soon learned that he had a unique power called a "stand" and that there were other people like him in the town, including his nephew Jotaro,
-          classmates Koichi and Okuyasu, and the snarky famous mangaka Rohan.
-        </p>
-      <br>
+  <!-- This is the main body  -->
+  <section id="hero">
+    <div id ="hero-copy">
+  </section>
 
+     <div class="container">
+       <div class="jotaro">
+         <h1>Title</h1>
+           <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+           Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+           pork prosciutto short ribs ham hock burgdoggen flank chuck.
+         </p>
+        </div>
 
-      <img src="img/jotaro.png">
-      <p>Josuke met his nephew under strange circumstances... His father was having an affair with a
-        Japanese woman several decades younger than him, thus the 12 year age-gap between Josuke and his nephew Jotaro.
-        Jotaro is a stoic man who is studying to earn his PhD in marine biology.
-      </p>
-      <br>
+       <div class="Oku">
+         <h1>Title</h1>
+         <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+         Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+         pork prosciutto short ribs ham hock burgdoggen flank chuck.
+       </p>
+       </div>
 
+       <div class="Koichi">
+         <h1>Title</h1>
+         <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
+         Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
+         pork prosciutto short ribs ham hock burgdoggen flank chuck.
+       </p>
+       </div>
 
-
-      <img src="img/Koichi.png">
-      <p>Koichi is an innocent boy with the heart of a lion. He joins Josuke after he discovers his own dormant
-        "stand" ability. He is generally kind, thoughtful, and somewhat neurotic.
-      </p>
-      <br>
-
-      <img src="img/Oku.png">
-      <p>Okuyasu is a young delinquent boy with a tragic past. He lost his older brother and lives
-        with his physically incapacitated father in a dilapidated, abandoned house in town. In spite of his
-        difficult life, Oku is a deeply affectionate and trusting person. He's Josuke's best friend and right-hand man.
-      </p>
-      <br>
-
-      <img src="img/Rohan.png">
-      <p>Rohan is a local comic book artist and writer (a mangaka). He's sort of a shit but he helps Josuke and the
-        crew track down the killer and solve the mystery with his intelligence and keen observational skills.
-      </p>
-      <br>
-
-      <img src="img/Hayato.jpg">
-      <p>The real heart of the adventure is Hayato, a young boy who discovers that the killer is his father.
-        He tracks down Josuke and the rest of the crew and manages to outwit his devious father to boot.
-      </p>
-      <br>
-
-      <img src="img/Kira.jpg">
-      <p>Kira Yoshikage is an evil man who is responsible for the murders of several men and women in the small
-        town of Morioh. He was able to blend in with society due to his mild-mannerisms and David Bowie-like charisma.
-        He was found out by the clever and brave Hayato, and brought down by the rest of the crew.
-      </p>
-      <br>
-
-
-      </article>
     </section>
 
   </main>
 
+ <section>
   <footer class="flex-grid-footer">
     <div class="col-main-footer">
       <h5>&copy;2017 LaCroix</h5>
     </div>
   </footer>
+</section>
 
 
 </body>
