--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -35,6 +35,7 @@
   <!-- This is the main body  -->
   <section id="hero">
     <div id ="hero-copy">
+      <h1>Jojo</h1>
   </section>
 
      <div class="container">
@@ -62,17 +63,14 @@
        </p>
        </div>
 
+       <div class="Rohan">
+       </div>
+
     </section>
 
   </main>
 
- <section>
-  <footer class="flex-grid-footer">
-    <div class="col-main-footer">
-      <h5>&copy;2017 LaCroix</h5>
-    </div>
-  </footer>
-</section>
+
 
 
 </body>
